# SimplyServe

./: .gitignore  APP_CONTEXT.md  README.md
.github/workflows/: docs-build.yml
app/: README.md  pubspec.yaml
app/assets/data/: recipe_attributes.json  recipe_ingredients.json  recipe_steps.json
app/coverage/: lcov.info
app/integration_test/: app_flow_test.dart  app_test.dart
app/lib/: authorisation.dart  homepage.dart  main.dart  recipe_page.dart
app/lib/services/: allergen_filter_service.dart  allergy_service.dart  authorisation.dart  custom_tag_service.dart  favourites_service.dart  meal_log_service.dart  meal_plan_service.dart  private_notes_service.dart  profile_service.dart  recipe_catalog_service.dart  recipe_service.dart  (+2 more)
app/test/: widget_test.dart
backend/: .coverage  .coveragerc  auth.py  backend_test_output.txt  database.py  main.py  models.py  pyproject.toml  pytest-report.html  pytest.ini  recipe_ingredients.py  schemas.py  test_password.py
backend/data/: base_ingredients.json  recipe_attributes.json  recipe_ingredients.json  recipe_steps.json
backend/tests/: conftest.py  test_auth.py  test_coverage_boost.py  test_direct_functions.py  test_helpers.py  test_main.py  test_models.py  test_recipe_management.py  test_recipes.py  test_user_profile.py
docs/: README.md  api.rst  architecture.rst  backend.rst  code-reference.rst  conf.py  development.rst  frontend.rst  getting-started.rst  index.rst  requirements.rst  requirements.txt  testing.rst
lib/: homepage.dart  main.dart
lib/widgets/: widgets.dart
test/: widget_test.dart
(+51 files in other folders)
